data/theme/gnome-shell.css
/* ... */
/* Check Boxes */

.check-box ShellGenericContainer {
    spacing: .8em;
}

.check-box StBin {
    width: 24px;
    height: 22px;
    background-image: url("checkbox-off.svg");
}

.check-box:focus StBin {
    background-image: url("checkbox-off-focused.svg");
}

.check-box:checked StBin {
    background-image: url("checkbox.svg");
}

.check-box:focus:checked StBin {
    background-image: url("checkbox-focused.svg");
}

/* PopupMenu */

.popup-menu-boxpointer,
.candidate-popup-boxpointer {
    -arrow-border-radius: 8px;
    -arrow-background-color: rgba(0,0,0,0.9);
    -arrow-border-width: 2px;
    -arrow-border-color: #a5a5a5;
    -arrow-base: 24px;
    -arrow-rise: 11px;
}

.popup-menu {
    min-width: 200px;
}

.popup-submenu-menu-item:open {
    background-color: #4c4c4c;
}

.popup-sub-menu {
    background-gradient-start: rgba(80,80,80,0.3);
    background-gradient-end: rgba(80,80,80,0.7);
    background-gradient-direction: vertical;
    box-shadow: inset 0px 2px 4px rgba(0,0,0,0.9);
}

.popup-sub-menu:scrolled .popup-menu-item:ltr {
    padding-right: 0em;
}

.popup-sub-menu:scrolled .popup-menu-item:rtl {
    padding-left: 0em;
}

.popup-sub-menu StScrollBar {
    padding: 4px;
}

.popup-sub-menu StScrollBar StBin#trough {
    border-width: 0px;
}

.popup-sub-menu StScrollBar StBin#vhandle {
    background-color: #4c4c4c;
    border-width: 0px;
}

.popup-combo-menu {
    background-color: rgba(0,0,0,0.9);
    padding: 1em 0em;
    border: 1px solid #5f5f5f;
    border-radius: 9px;
}

/* The remaining popup-menu sizing is all done in ems, so that if you
 * override .popup-menu.font-size, everything else will scale with it.
 */
.popup-menu-content {
    padding: 1em 0em;
}

.popup-menu-item {
    padding: .4em 1.75em;
    spacing: 1em;
}

.popup-menu-item:active {
    background-color: #4c4c4c;
}

.popup-menu-item:insensitive {
    color: #9f9f9f;
}

.popup-image-menu-item {
}

.popup-combobox-item {
    spacing: 1em;
}

.popup-separator-menu-item {
    -gradient-height: 1px;
    -gradient-start: rgba(255,255,255,0.0);
    -gradient-end: rgba(255,255,255,0.3);
    -margin-horizontal: 24px;
    height: 1px;
    padding: 8px 0px;
}

.popup-alternating-menu-item:alternate {
    font-weight: bold;
}

.popup-slider-menu-item {
    height: 1em;
    min-width: 15em;
    -slider-height: 0.3em;
    -slider-background-color: #333333;
    -slider-border-color: #5f5f5f;
    -slider-active-background-color: #76b0ec;
    -slider-active-border-color: #1f6dbc;
    -slider-border-width: 1px;
    -slider-handle-radius: 0.5em;
}

.popup-device-menu-item {
    spacing: .5em;
}

.popup-status-menu-item {
    font-weight: normal;
    color: #999;
}

.popup-inactive-menu-item, .popup-inactive-menu-item:insensitive {
    color: white;
}

.popup-subtitle-menu-item, .popup-subtitle-menu-item:insensitive {
    font-weight: bold;
    color: white;
}

.popup-menu-icon {
    icon-size: 1.09em;
}

.popup-user-menu-item-icon {
    icon-size: 18px;
    color: #fff;
    padding-right: 15px;
}

.settings-menu-icon {
    icon-size: 30px;
}

.panel-separator-icon {
    width: 1px;
    height: 30px;
    icon-size: 30px
}

.popup-battery-percentage {
    padding-left: 24px;
}

.popup-options-menu-item {
    background-gradient-direction: vertical;
    background-gradient-start: rgba(255, 255, 255, 0.15);
    background-gradient-end: rgba(255, 255, 255, 0);
    background-size: contain;
    height: 22px;
    border-radius: 3px;
    border: 1px solid #1c1c1c;
}

.popup-options-menu-item-button-holder:active {
    background-gradient-direction: vertical;
    background-gradient-start: #323232;
    background-gradient-end: #141414;
    background-size: contain;
}

.popup-options-menu-item-button-holder:pressed {
    background-gradient-direction: vertical;
    background-gradient-start: #0D0D0D;
    background-gradient-end: #000;
    background-size: contain;
}

.popup-options-menu-item-button {
    font-size: 11px;
    font-weight: 600;
    color: #ccc;
}

.popup-options-menu-item-button:pressed {
    color: #555;
}

/* Switches */
.toggle-switch {
    width: 65px;
    height: 22px;
}

.toggle-switch-us {
    background-image: url("toggle-off-us.svg");
    background-size: contain;
}
.toggle-switch-us:checked {
    background-image: url("toggle-on-us.svg");
    background-size: contain;
}

.toggle-switch-intl {
    background-image: url("toggle-off-intl.svg");
    background-size: contain;
}
.toggle-switch-intl:checked {
    background-image: url("toggle-on-intl.svg");
    background-size: contain;
}

.nm-menu-item-icons {
    spacing: .5em;
}

/* Buttons */

.candidate-page-button,
.notification-button,
.notification-icon-button,
.hotplug-notification-item,
.hotplug-resident-eject-button,
.modal-dialog-button {
    border: 1px solid #8b8b8b;
    background-gradient-direction: vertical;
    background-gradient-start: rgba(255, 255, 255, 0.2);
    background-gradient-end: rgba(255, 255, 255, 0);
}

.modal-dialog-button {
    font-weight: bold;
}

.candidate-page-button:hover,
.notification-button:hover,
.notification-icon-button:hover,
.hotplug-notification-item:hover,
.hotplug-resident-eject-button:hover,
.modal-dialog-button:hover {
    background-gradient-start: rgba(255, 255, 255, 0.3);
    background-gradient-end: rgba(255, 255, 255, 0.1);
}

.notification-button:focus,
.notification-icon-button:focus,
.hotplug-notification-item:focus,
.modal-dialog-button:focus {
    border-width: 2px;
}

.candidate-page-button:active,
.candidate-page-button:pressed,
.notification-button:active,
.notification-icon-button:active,
.hotplug-notification-item:active,
.hotplug-resident-eject-button:active,
.modal-dialog-button:active,
.modal-dialog-button:pressed {
    background-gradient-start: rgba(255, 255, 255, 0);
    background-gradient-end: rgba(255, 255, 255, 0.2);
}
/* ... */

